# niconavi_app

./: .gitignore  LICENSE  Pipfile  README.md  main.py  niconavi.py  pyproject.toml  run_niconav_linux.sh  run_niconavi.sh  run_niconavi_Mac.command  run_niconavi_Windows.bat  run_niconavi_mac.sh  setup.py
Examples/cpo/: 0deg-tilt.avi  45deg-not-tilt.avi  45deg-tilt.avi
src/: _tmp.py  download_manager.py  main.py  match_used_name.py  reactive_state.py  save.py  stores.py
src/components/: app_bar.py  color_bar.py  common_component.py  image_selector.py  image_view.py  log_view.py  progress_bar.py
src/components/labeling_app/: __labeling_controller.py  _stores.py  app_gui.py  label_controls.py  label_propagation.py  labeling_controller.py  labeling_left_view.py  labeling_right_view.py  reset.py  state.py  tempCodeRunnerFile.py  ui_theme.py  visualization.py
src/components/page_tab/: page_tab.py
src/components/selector/: always.py  cip.py  filter.py  grain.py  merge.py  movie.py  spo.py  tools.py
src/components/view/: analysis_view.py  (+7 more)
src/make_stores/: make_stores.py  template.py
src/nicolnavi/: _generate_test.py  analysis.py  cip.py  custom_error.py  find_center.py  grain_analysis.py  grain_classification.py  grain_detection.py  grain_segmentation_map.py  inclination.py  log.py  make_reset_file.py  reset_run_all.py  rorate.py  select_calibration_color.py  tilt_image.py  tmp.py  type.py
src/niconavi/: __init__.py  grain_merge.py  make_map.py  retardation_normalization.py  run_all.py
src/tools/: error.py  no_image.py  parser.py  tools.py  validation.py
(+107 files in other folders)
