[project]
name = "niconavi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adjusttext>=1.3.0",
    "colour-science>=0.4.7",
    "flet-desktop-light==0.28.3 ; sys_platform == 'linux'",
    "flet[all]>=0.28.3",
    "imageio[ffmpeg]>=2.37.2",
    "lark>=1.3.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "result>=0.17.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
]

[dependency-groups]
dev = [
    "imageio>=2.37.2",
    "mypy>=1.19.0",
    "notebook>=7.5.0",
]
